Add MyHtmlGenerator to the project  and change the use of DefaulHtmlGenrator to MyHtmlGenerator

--- a/MyAspNetCoreWebPageNet/Views/Adress/Index.cshtml
+++ b/MyAspNetCoreWebPageNet/Views/Adress/Index.cshtml
@@ -27,9 +27,7 @@
 @foreach (var item in Model)
 {
          <tr>
-            <td>
-               @Html.DisplayFor(modelItem => item.VoorNaam)
-            </td>
+            <td asp-for="@item.VoorNaam"/>
            <td>
                 @Html.DisplayFor(modelItem => item.AchterNaam)
             </td>
