--- a/MyAspNetCoreWebPageNet/Views/_ViewImports.cshtml
+++ b/MyAspNetCoreWebPageNet/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using MyAspNetCoreWebPageNet
+@using MyTagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, MyTagHelpers
